# zx-debugger

./: .gitignore  CMakeLists.txt  README.md  icon.rc
base/: types.h
client/: CMakeLists.txt  main.cpp
cmake/: target_macros.cmake
src/: CMakeLists.txt
src/app/: main_window.cc  main_window.hpp  setup_menu.cc  setup_menu.hpp
src/base/: ascii.cc  ascii.hpp  assert.cc  assert.hpp  attributes.hpp  config.hpp  path.cc  path.hpp  types.hpp
src/client/: CMakeLists.txt  main.cc  main.cpp  main_window.cc  main_window.hpp
src/client/ui/: application.cc  application.hpp  widget.cc  widget.hpp  widget_utils.cc  widget_utils.hpp
src/libgui/: accelerator_target.cc  accelerator_target.hpp  application.cc  application.hpp  box.cc  box.hpp  button.cc  button.hpp  clickable.hpp  color.cc  color.hpp  header_bar.cc  header_bar.hpp  image.cc  image.hpp  include.hpp  label.cc  label.hpp  libgui.hpp  menu_bar.cc  menu_bar.hpp  menu_item.cc  menu_item.hpp  notebook.cc  notebook.hpp  stack.cc  stack.hpp  status_bar.cc  status_bar.hpp  widget.cc  widget.hpp  window.cc  window.hpp
